compiler/kernc_cli/tests/soundness/run-pass/specialization/diamond_supertrait_object_upcast_keeps_const_specific_assoc_binding.rn
// exit: 0

type Base[N: usize] = trait {
    type Out;
    tag: fn() i32,
};

type Left[N: usize]: Base[N] = trait {};
type Right[N: usize]: Base[N] = trait {};
type Leaf[N: usize]: Left[N] + Right[N] = trait {};

type X = struct {};

impl[N: usize] *X: Left[N] {}
impl[N: usize] *X: Right[N] {}
impl[N: usize] *X: Leaf[N] {}

impl[N: usize] *X: Base[N] {
    type Out = i32;

    fn tag() i32 {
        return 1;
    }
}

impl *X: Base[4] {
    type Out = i64;

    fn tag() i32 {
        return 9;
    }
}

fn take(value: *Base[4]) i32 {
    return value.tag() - 9;
}

fn main() i32 {
    let x = X.{};
    let leaf = *Leaf[4].{ x.& };
    return take(leaf);
}
