compiler/kernc_cli/tests/soundness/reject/const_generics/non_contractive_associated_projection_growth_rejected.rn
// class: projection-cycle
// stderr: recursive associated type projection cycle detected
// stderr: projection repeatedly re-enters the same impl-associated type

type Loop[N: usize] = trait {
    type Out;
};

type X = struct {};

impl[N: usize] X: Loop[N] {
    type Out = X.Loop[N + 1].Out;
}

fn project(value: X) X.Loop[0].Out {
    _ = value;
    return X.{};
}

fn main() i32 {
    _ = project(X.{});
    return 0;
}
